# unimore_roboracer

./: .gitignore  CMakeLists.txt  Config.cmake.in  Doxyfile  INSTRUCTIONS.md  MainPage.dox  README.md  package.xml
conf/: params_carla.yaml  params_gym.yaml  params_kitt.yaml
include/: purepursuit_node.hpp
include/adx_curve/: segment.hpp
include/adx_data/: covariance.hpp  header.hpp  obstacle.hpp  pose.hpp  timestamp.hpp  twist.hpp  vector.hpp
include/particle_filter/: particle_filter.hpp
include/purepursuit/: purepursuit.hpp
include/ray_casting/: ray_marching.hpp
launch/: map_server.launch.py  purepursuit_bag.launch.xml  purepursuit_kitt.launch.xml  purepursuit_segment.launch.xml  purepursuit_sim.launch.xml
maps/Vegas/: internal.trj  opt1.trj  opt3.trj  opt4.trj  opt5.trj  opt6-10.trj  opt6-5.trj  opt6.trj  outer.trj  vegas.trj  vegas_bounds.yaml
maps/corridor_r02/: map.yaml
maps/fisica/: map.yaml
maps/icra/: opt.trj
maps/icra/icra/: outer.trj
maps/icra_ext/: inner.trj  outer.trj  sectors.txt
maps/lausitzring1/: map.trj
maps/lausitzring2/: map1.yaml  opt.trj  opt_1.trj
maps/mille_conf3/: map.trj  map.yaml  opt.trj  outer.trj
maps/mille_conf4/: inner.trj  opt.trj
maps/mille_conf_large/: map.yaml
maps/tshot_mille_long/: map.trj
msg/: ArbitratedAckermannDrive.msg  Obstacle.msg  ObstacleArray.msg  PlanPoint.msg
path_logger/: CMakeLists.txt  Doxyfile  package.xml
path_logger/launch/: path_logger.launch  path_logger_quattroporte.launch.xml  path_logger_sim.launch.xml  path_logger_tshot.launch.xml
path_logger/src/: main.cpp  path_logger.cpp
path_publisher/: Doxyfile
path_publisher/launch/: path_publisher.launch
path_publisher/src/: path_publisher.cpp  path_publisher_node.cpp
scripts/: build.sh
src/: header.cpp  pf_main.cpp  purepursuit_node.cpp  segment.cpp  spline.cpp  timestamp.cpp
src/adx_curve/: README.md
src/adx_curve/include/adx_curve/: curve.hpp  spline.hpp  vector.hpp
src/adx_data/: .gitignore  Doxyfile  MainPage.dox  package.xml
src/adx_data/include/adx_data/: odometry.hpp  particle.hpp  path.hpp  point.hpp  quaternion.hpp
src/adx_data/src/: odometry.cpp
src/adx_data/test/: test_covariance.cpp
src/adx_data_ros/: CMakeLists.txt
src/adx_data_ros/include/adx_data_ros/: adx_data_ros.hpp
src/adx_data_ros/test/: test_header.cpp  test_plan.cpp
src/adx_msgs/: LICENSE
src/adx_msgs/msg/: LapTime.msg  Plan.msg  SectorSet.msg  SectorStamped.msg  Track.msg  TrackArray.msg
src/maps/: CMakeLists.txt  README.md
src/maps/maps/Vegas/: 2f2f.trj  central.trj  external.trj  inner.trj  opt.trj  opt2.trj  opt7.trj  opt7bis.trj  optimal.trj
src/maps/maps/corridor_r05/: map.yaml
src/maps/maps/datacenter/: map.trj  map.yaml  opt.trj
src/maps/maps/fisica/: map.pgm
src/maps/maps/icra/: map.trj  map.yaml
src/maps/maps/icra/icra/: inner.trj
src/maps/maps/lausitzring1/: inner.trj  map.yaml  opt.trj  opt1.trj  outer.trj
src/maps/maps/lausitzring2/: map.yaml
src/maps/maps/mille_conf3/: inner.trj
src/maps/maps/mille_conf4/: map.trj  outer.trj
src/maps/maps/mille_conf_large/: inner.trj  map.trj  mille_head1.pgm  opt.trj  outer.trj
src/maps/maps/tshot_mille_long/: map.yaml
src/particle_filter/: CMakeLists.txt  package.xml  particle_filter.cpp
src/particle_filter/conf/: particle.yaml
src/particle_filter/include/particle_filter/: particle_filter_node.hpp
src/particle_filter/include/ray_casting/: ray_casting.hpp  ray_marching_fpga.hpp
src/particle_filter/src/ray_casting/: ray_casting.cpp  ray_marching.cpp  ray_marching_fpga.cpp
src/path_handler/: .gitignore  README.md
src/path_handler/path_logger/include/path_logger/: path_logger.hpp  path_logger_node.hpp
src/path_handler/path_logger/launch/: path_logger.launch.xml  path_logger_cnh.launch
src/path_handler/path_logger/src/: path_logger_node.cpp
src/path_handler/path_publisher/: CMakeLists.txt  package.xml
src/path_handler/path_publisher/include/path_publisher/: path_publisher.hpp  path_publisher_node.hpp
src/path_handler/path_publisher/launch/: path_publisher.launch.xml  path_publisher_kitt.launch.xml  path_publisher_quattroporte.launch  path_publisher_quattroporte.launch.xml  path_publisher_tshot.launch.xml
src/path_handler/path_publisher/src/: main.cpp
src/purepursuit/: CMakeLists.txt  package.xml  purepursuit.cpp
src/purepursuit/.gitlab/: CODEOWNERS
src/purepursuit/conf/: params_cnh.yaml  params_quattroporte.yaml  params_tshot.yaml
src/purepursuit/launch/: purepursuit_carla.launch.xml  purepursuit_cnh.launch  purepursuit_gym.launch.xml  purepursuit_h2h.launch.xml  purepursuit_quattroporte.launch.xml  purepursuit_tshot.launch.xml
src/purepursuit/src/: purepursuit_segment.cpp
src/vehicles/kitt/: CMakeLists.txt  package.xml
src/vehicles/kitt/conf/: map_server_params.yaml  particle.yaml  purepursuit.yaml  slam_toolbox.yaml  urg.yaml
src/vehicles/kitt/launch/: map_server.launch.py  mapping.launch.xml  particle.launch.xml  path_publisher.launch.xml  pp_global.launch.xml  purepursuit.launch.xml
src/vehicles/kitt/model/urdf/: car.urdf.xacro  materials.urdf.xacro  model.urdf
src/vehicles/kitt/model/urdf/base/: base.urdf.xacro
src/vehicles/kitt/model/urdf/sensors/: imu.urdf.xacro  lidar.urdf.xacro  zed.urdf.xacro
test/: helper_functions.hpp  test_odometry.cpp  test_point.cpp  test_pose.cpp  test_quaternion.cpp  test_twist.cpp
