<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>adx_data_ros</name>
    <version>1.0.0</version>
    <description>ROS conversion functions for adx_data types</description>
    <maintainer email="federico.gavioli@unimore.it">Federico Gavioli</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <depend>adx_data</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>adx_msgs</depend>
    <depend>tf2</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

