<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maps</name>
  <version>1.0.0</version>
  <description>Package providing all previously-seen f1tenth maps</description>
  <maintainer email="federico.gavioli@unimore.it">fgavioli</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
