<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_publisher</name>
  <version>1.0.0</version>
  <description>Publish a TUM-formatted trajectory on ROS2 topics</description>
  <maintainer email="federico.gavioli@unimore.it">fgavioli</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>adx_msgs</depend>

  <depend>adx_data</depend>
  <depend>adx_data_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
